优化登录框

--- a/react-common/styles/profile/profile.less
+++ b/react-common/styles/profile/profile.less
@@ -358,12 +358,13 @@
 
 .signin-form {
     margin: 0 1rem;
+    color:#ffffff;
 
     .signin-header {
         margin: 0 0 1rem 0;
         display: flex;
         flex-direction: column;
-        gap: 0.5rem;
+        gap: 0.5rem;        
     }
 
     .signin-body {
