--- a/theme/common.less
+++ b/theme/common.less
@@ -2287,7 +2287,7 @@ div.simframe.ui.embed {
 div.signin-button {
     display: flex;
     align-items: center;
-    background-color: @homeScreenBackground;
+    background-color: #ffc914;
     color: black;
     border-radius: 6px;
     height: 3rem;
